RESOLVED FIXED 262959
[IFC][Simplified minimum intrinsic width] Empty text content is not breakable
https://bugs.webkit.org/show_bug.cgi?id=262959
Summary [IFC][Simplified minimum intrinsic width] Empty text content is not breakable
zalan
Reported 2023-10-10 08:52:01 PDT
ssia
Attachments
[fast-cq]Patch (2.89 KB, patch)
2023-10-10 08:55 PDT, zalan
no flags
zalan
Comment 1 2023-10-10 08:52:17 PDT
zalan
Comment 2 2023-10-10 08:55:54 PDT
Created attachment 468149 [details] [fast-cq]Patch
EWS
Comment 3 2023-10-10 11:42:57 PDT
Committed 269159@main (870a65215537): <https://commits.webkit.org/269159@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 468149 [details].
Note You need to log in before you can comment on or make changes to this bug.