[IFC][Simplified minimum intrinsic width] Empty text content is not breakable https://bugs.webkit.org/show_bug.cgi?id=262959

Reviewed by Antti Koivisto.

Non-simplified codepath handles empty content as non-breakable as well.

* LayoutTests/fast/text/minimum-width-break-on-empty-content-crash-expected.txt: Added.
* LayoutTests/fast/text/minimum-width-break-on-empty-content-crash.html: Added.
* Source/WebCore/layout/formattingContexts/inline/InlineContentBreaker.cpp:
(WebCore::Layout::InlineContentBreaker::simplifiedMinimumInstrinsicWidthBreak const):

Canonical link: https://commits.webkit.org/269159@main